deployment-Service-ClusterIP.yml

apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: ClusterIP
  selector:
    app: node
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
   
---
