deployment-Service-NodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: NodePort
  selector:
    app: node
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
   
---
