deployment-Ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-ingress
spec:
  rules:
  - host: test.dev.local
    http:
      paths:
      - path: /
        backend:
          serviceName: node-service
          servicePort: 3000
