deployment-simple.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  labels:
    app: node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: node
        image: node:13.7.0-alpine3.10
        command: [ "node", "/app/index.js" ]
        volumeMounts:
        - name: config-volume
          mountPath: /app
        ports:
        - containerPort: 3000
      volumes:
      - name: config-volume
        configMap:
        # Provide the name of the ConfigMap containing the files you want
        # to add to the container
          name: node-script

---

apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: ClusterIP
  selector:
    app: node
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
   
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-ingress
spec:
  rules:
  - host: test.dev.local
    http:
      paths:
      - path: /
        backend:
          serviceName: node-service
          servicePort: 3000
